# jaide

./: .gitignore  Makefile  README.md  disk.img  file.txt  problems.md  pyproject.toml  requirements.in  test.txt
.github/workflows/: test.yml
.zed/: settings.json
asm/: assembler.py  instructions.py  jasm.py  util.py
asm/standard/: io.jasm  memory.jasm
circuit/: jaide.circ
common/: isa.py
doc/: abi.md  assembler.md  ebnf.txt  file.md  graphics.md  inst.txt  kernel.md  lang.ebnf  lang.md  plan.md  spec.md  spec16.md
docs/: kernel.md  lang.md  problems.md  spec.md
emulator/: bus.py  constants.py  emulator.py  exceptions.py  handlers.py  register.py  repl.py
jaide/: __main__.py  bus.py  constants.py  core.py  devices.py  emulator.py  exceptions.py  handlers.py  register.py  repl.py
jaideos/: boot.jasm
jasm/: __main__.py  assembler.py  binary.py  instructions.py  jasm.py  labels.py  macros.py  parse.py  util.py
jfs/: __main__.py  constants.py  util.py
kernel/: boot.jasm
old/: assembler.py  instructions.py  jasm.py
os/: boot.jasm  graphics.jasm  kernel.jasm  shell.jasm  util.jasm
programs/: blink.jasm  boot.jasm  debug.jasm  fib.jasm  grammar.jasm  graphics.jasm  import.jasm  literals.jasm  macro.jasm  mangle.jasm  screen.jasm  strings.jasm  test.jasm  tty.jasm
test/: conftest.py  test_alu.py  test_assembler.py  test_binary_encoding.py  test_emulator.py  test_instructions.py  test_isa_coverage.py  test_memory_bus.py  test_repl.py
tests/: conftest.py  test_alu.py  test_assembler.py  test_binary_encoding.py  test_instructions.py
(+92 files in other folders)
