[project]
name = "jaide"
version = "0.1.0"
description = "custom cpu architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "lark>=1.3.1",
    "pillow>=12.1.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
