[project]
name = "jaide"
version = "0.0.5"
description = "custom cpu architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama==0.4.6",
    "lark==1.3.1",
    "pygame==2.6.1",
    "pytest==9.0.2",
    "ruff==0.15.8",
    "typed-argument-parser==1.12.0",
]

[tool.pytest]
testpaths = ["test"]

[tool.ruff]
fix = true
line-length = 320

[tool.ruff.lint]
select = ["I"]

[tool.pyright]
venvPath = "."
venv = ".venv"
